add users to docker group

--- a/tasks/install.yml
+++ b/tasks/install.yml
@@ -20,3 +20,15 @@
     name: docker
     state: started
     enabled: yes
+
+# Add users to docker
+- name: Add users to docker group
+  user:
+    name:   "{{ item }}"
+    group:  docker
+  with_items:
+    - "{{ docker_users }}"
+
+- name: reload sshd
+  notify:
+    - reloaded sshd
