add vars _ docs

--- a/tasks/install.yml
+++ b/tasks/install.yml
@@ -30,5 +30,6 @@
     - "{{ docker_users }}"
 
 - name: reload sshd
-  notify:
-    - reloaded sshd
+  service:
+    name: sshd
+    state: reloaded
