--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,8 +1,17 @@
 ---
 
+# CIS 1.1
+docker_vg: 'vg.docker'
+docker_lv: 'lv.docker'
+docker_mount: '/var/lib/docker'
+
+# CIS 1.4
 docker_users:
 
+# CIS 2.6
 docker_tls_host: 127.0.0.1
 docker_tls_dir: /etc/docker/certs.d/regestry
 
+
 docker_swarm_token:
+
