--- a/tasks/config.yml
+++ b/tasks/config.yml
@@ -23,13 +23,16 @@
     src: etc/audit/rules.d/docker.rules.j2
     dest: /etc/audit/rules.d/docker.rules
 
-# TODO fix
+# TODO fix - not triggered
+# service auditd restart
 - name: Restart `auditd`
   systemd:
     name: auditd
     state: restarted
     daemon_reload: yes
   ignore_errors: yes
+
+
 
 # 2.8 User namespace support
 - name: Add User namespace support
